--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -2337,4 +2337,10 @@ config CMD_UBIFS
 	help
 	  UBIFS is a file system for flash devices which works on top of UBI.
 
+config CMD_KHADAS_KBI
+	bool "Khadas Bootloader Instructions"
+	depends on TARGET_EVB_RK3399
+	help
+	  Khadas Bootloader Instructions
+
 endmenu
