--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -385,4 +385,11 @@ config POWER_MT6323
 	  This adds poweroff driver for mt6323
 	  this pmic is used on mt7623 / Bananapi R2
 
+config POWER_FUSB302
+	bool "Fairchild FUSB302 Type-C chip driver"
+	help
+	  The Fairchild FUSB302 Type-C chip driver that works with
+	  Type-C Port Controller Manager to provide USB PD and USB
+	  Type-C functionalities.
+
 endmenu
