--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -2342,4 +2342,10 @@ config CMD_KHADAS_KBI
 	help
 	  Khadas Bootloader Instructions
 
+config CMD_SCRIPT
+	bool "simple plain script run from mem without mkimage wrappers"
+	default y
+	help
+	  simple plain script run from mem without mkimage wrappers
+
 endmenu
